# rangeQuery

./: CMakeLists.txt  README.md
include/: api.h
src/: api.cpp  main.cpp
